# employee_task_tracker

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  env.sample  pyproject.toml  pytest.ini  readme.md
config/: settings.py  urls.py
employees/: models.py  serializers.py  tests.py  views.py
employees/migrations/: 0001_initial.py
tasks/: models.py  serializers.py  tests.py  views.py
tasks/migrations/: 0001_initial.py
